--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,14 @@
 Package: msm.stacked
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Version: 0.0.0.9000
+Authors@R: c(
+  person(given = "Alessandro", 
+         family = "Gasparini", 
+         email = "alessandro.gasparini@reddooranalytics.se", 
+         role = c("aut", "cre")),
+  person("Red Door Analytics AB", role = c("cph"))
+  )
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
