--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,6 @@ Authors@R: c(
   )
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
