--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,4 @@ Description: More about what it does (maybe more than one line)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.1
