--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,6 @@ Imports:
   ggplot2,
   msm,
   rlang (>= 0.4.0)
+URL: https://github.com/RedDoorAnalytics/msm.stacked
+BugReports: https://github.com/RedDoorAnalytics/msm.stacked/issues
+Roxygen: list(markdown = TRUE)
