--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,13 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
 Imports:
+  checkmate,
   ggplot2,
   msm,
   rlang (>= 0.4.0)
 URL: https://github.com/RedDoorAnalytics/msm.stacked
 BugReports: https://github.com/RedDoorAnalytics/msm.stacked/issues
 Roxygen: list(markdown = TRUE)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
