More language improvements

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(
   )
 Description: Create stacked probabilities plots for multi-state models fitted using
     the 'msm' package. Plots are created using the 'ggplot2' package, and can be
-    further customised by the user. State occupancy probabilities over time can also
+    further customised by the user. State transition probabilities over time can also
     be calculated, including conditional predictions on being in a certain state at 
     a given time.
 License: MIT + file LICENSE
