--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
   msm,
   rlang (>= 0.4.0)
 Suggests:
+  covr,
   testthat (>= 3.0.0)
 URL: https://github.com/RedDoorAnalytics/msm.stacked
 BugReports: https://github.com/RedDoorAnalytics/msm.stacked/issues
