--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,10 @@ Authors@R: c(
   person("Red Door Analytics AB", role = c("cph"))
   )
 Description: Create stacked probabilities plots for multi-state models fitted using
-    the 'msm' package. Plots are created using the 'ggplot2' package, and can be
-    further customised by the user. State transition probabilities over time can also
-    be calculated, including conditional predictions on being in a certain state at 
-    a given time.
+  the 'msm' package. Plots are created using the 'ggplot2' package, and can be
+  further customised by the user. State transition probabilities over time can also
+  be calculated, including conditional predictions on being in a certain state at 
+  a given time.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -25,9 +25,12 @@ Imports:
   rlang (>= 0.4.0)
 Suggests:
   covr,
+  knitr,
+  rmarkdown,
   testthat (>= 3.0.0)
 URL: https://github.com/RedDoorAnalytics/msm.stacked
 BugReports: https://github.com/RedDoorAnalytics/msm.stacked/issues
 Roxygen: list(markdown = TRUE)
 Config/testthat/edition: 3
 Language: en-GB
+VignetteBuilder: knitr
